[package]
name = "tcp_transparent_repeater"
version = "0.2.1"
authors = ["Yifan Gao <git@yfgao.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
nix = "0.19"
bytes = "1"

[profile.release]
opt-level = 3
strip = true
lto = true
overflow-checks = false
