[package]
name = "tcp_transparent_repeater"
version = "0.4.0"
authors = ["Yifan Gao <git@yfgao.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
bytes = "1"
socket2 = "0.5.7"
nix = { version = "0.30", features = ["socket", "net"] }

[profile.release]
opt-level = 3
lto = true
overflow-checks = false
